Refactor and add thorough tests for AddStep